+ Changed UI string "Send" to "Save"
+ Made sure the database uses UTF-8 for the connection
+ Fixed links in e-mail notifications for new project / message
+ When editing closed tasks/projects in tables, the edit form is now displayed in the top block, like for open tasks/projects
+ Fixed UI glitches with "Never due" field in project add/edit forms

Collabtive 1.0
+ Added translations: Hebrew, Norwegian (Nynorsk), Taiwanese
+ Improved translations: Albanian, Arabic, Bulgarian, Danish, Farsi, French, German, Greek, Hungarian, Italian, Norwegian (Bokmål), Polish, Portuguese (Brazilian), Slovak, Serbian, Turkish
+ Added translations of install-readme: Hungarian
+ Improved translations of install-readme: Arabic
+ Changed name of autoload function to cl_autoload and added it with spl_autoload_register() to autoload list, to not interfere other autoloaders
+ Implemented automatic update notification.
+ Completely re-written the PDF export. It now uses a custom subclass of TCPDF to directly draw the tables for the reports from arrays instead of using an HTML intermediate.
  This greatly speeds up PDF generation (esp when many lines are exported) and generates much smaller PDFs.
+ Fixed problem with missing "webcolor" variable in TCPDF
+ Improved the project log PDF report by merging fields, improving shading and adding automatic font stretching.
+ Added new PDF report to the "my tasks" block on the desktop. Now a user can export all his tasks to PDF.
+ Re-enabled permissions checking when deleting a timetracker entry. This got disabled for testing purposes and was commited to trunk. Disabling it posed a possible security risk.
+ Added permissions checking to timetracker:add and timetracker:edit . Permissions set in the useraccount where not properly enforced for the timetracker before.
+ Rewrote the settings functionality to work with a key/value table as the datastore. This makes extensibility easier.